--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.redhat</groupId>
-	<artifactId>knapsack-optaplanner</artifactId>
+	<artifactId>knapsack-optaplanner-springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>knapsack-optaplanner</name>
-	<description>OptaPlanner knapsack problem</description>
+	<name>knapsack-optaplanner-springboot</name>
+	<description>OptaPlanner knapsack problem in Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
